--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="shop">
           <h2>Shop</h2>
           <div class="upgrade-row" id="upgrade-row">
-            <div class="upgrade-info">
+            <!-- <div class="upgrade-info">
               <div class="info-title">
                 <div class="info-title-left">
                   <img src="./assets/img/click_img.png" alt="fertilizer" />
@@ -45,7 +45,7 @@
                 <p class="upgrade-cost"><span id="cost">12341520</span> B.</p>
               </div>
               <p id="upgrade-text">Increases Bud production from plants.</p>
-            </div>
+            </div> -->
           </div>
           <div class="buildings">
             <div class="building-controls">
