added new upgrades and buildings, fixed styling issues, added local storage

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
         </div>
       </section>
     </main>
-    <script src="script.js"></script>
+    <script src="./buildings.js"></script>
+    <script src="./upgrades.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
