price patch, production patch, changed oz to buds and reset game btn

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <nav class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
+          <li><a href="" id="resetGame" class="btn">Reset Game</a></li>
         </ul>
       </nav>
     </header>
@@ -22,8 +23,8 @@
         <div class="click-container">
           <div class="currentBuds">
             <p id="buds">0</p>
-            <h2>OZs of Weed</h2>
-            <h4><span id="bps">0</span> OZs per second</h4>
+            <h2>buds of Weed</h2>
+            <h4><span id="bps">0</span> buds per second</h4>
           </div>
           <div id="clicker">
             <img src="./assets/img/click_img.png" alt="bud" />
@@ -64,7 +65,8 @@
                 <input type="radio" name="amount" id="hundredPer" />
               </div>
             </div>
-            <div class="building-shop" id="building-shop"></div>
+            <div class="building-shop" id="building-shop">
+            </div>
           </div>
         </div>
       </section>
