--- a/index.html
+++ b/index.html
@@ -2,19 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes"
+    />
+
+    <link rel="stylesheet" href="facelift_style.css" />
+    <script
+      src="https://kit.fontawesome.com/b36ea12d2e.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Weed Clicker</title>
   </head>
   <body>
     <header>
-      <div class="header logo">
-        <h1>CLICKER</h1>
-      </div>
       <nav class="navbar">
-        <ul>
+        <a href="" class="btn desktop" id="resetGame">Reset Game</a>
+
+        <div class="nav-logo">
+          <img src="./assets/img/logo.svg" alt="Weed Clicker Logo" />
+        </div>
+        <div class="hamburger">
+          <i class="fas fa-bars"></i>
+        </div>
+        <ul class="nav-links-mobile">
           <li><a href="index.html">Home</a></li>
-          <li><a href="" id="resetGame" class="btn">Reset Game</a></li>
+          <li>
+            <a href="https://www.github.com/yousifpa98/clicker"
+              ><i class="fab fa-github"></i> Repository</a
+            >
+          </li>
+          <li><a href="" class="btn" id="resetGame">Reset Game</a></li>
+          <li class="ver">ver. <span id="version">0.0.1</span></li>
+        </ul>
+        <ul class="nav-links-desktop">
+          <li><a href="index.html">Home</a></li>
+          <li>
+            <a href="https://www.github.com/yousifpa98/clicker"
+              ><i class="fab fa-github"></i>Repository</a
+            >
+          </li>
+          <li class="ver">ver. <span id="version">0.0.1</span></li>
         </ul>
       </nav>
     </header>
@@ -30,23 +58,23 @@
             <img src="./assets/img/click_img.png" alt="bud" />
           </div>
         </div>
-        <div class="items"></div>
+        <!-- <div class="items"></div> -->
         <div class="shop">
           <h2>Shop</h2>
           <div class="upgrade-row" id="upgrade-row">
             <!-- <div class="upgrade-info">
-              <div class="info-title">
-                <div class="info-title-left">
-                  <img src="./assets/img/click_img.png" alt="fertilizer" />
-                  <div class="info-title-text">
-                    <h3>Fertilizer</h3>
-                    <div class="upgrade-tag">upgrade</div>
+                  <div class="info-title">
+                    <div class="info-title-left">
+                      <img src="./assets/img/click_img.png" alt="fertilizer" />
+                      <div class="info-title-text">
+                        <h3>Fertilizer</h3>
+                        <div class="upgrade-tag">upgrade</div>
+                      </div>
+                    </div>
+                    <p class="upgrade-cost"><span id="cost">12341520</span> B.</p>
                   </div>
-                </div>
-                <p class="upgrade-cost"><span id="cost">12341520</span> B.</p>
-              </div>
-              <p id="upgrade-text">Increases Bud production from plants.</p>
-            </div> -->
+                  <p id="upgrade-text">Increases Bud production from plants.</p>
+                </div> -->
           </div>
           <div class="buildings">
             <div class="building-controls">
@@ -65,14 +93,26 @@
                 <input type="radio" name="amount" id="hundredPer" />
               </div>
             </div>
-            <div class="building-shop" id="building-shop">
-            </div>
+            <div class="building-shop" id="building-shop"></div>
           </div>
         </div>
       </section>
     </main>
+    <footer>
+      <p>
+        &copy; 2024 <a href="https://www.yousifpaulus.dev">Yousif Paulus</a>
+      </p>
+      <ul class="footer-socials">
+        <li>
+          <a href="https://www.github.com/yousifpa98"
+            ><i class="fab fa-github"></i
+          ></a>
+        </li>
+      </ul>
+    </footer>
     <script src="./buildings.js"></script>
     <script src="./upgrades.js"></script>
     <script src="./script.js"></script>
+    <script src="cosmetics.js"></script>
   </body>
 </html>
