--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       src="https://kit.fontawesome.com/b36ea12d2e.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="icon" type="image/svg+xml" href="./assets/img/favicon.svg" />
     <title>Weed Clicker</title>
   </head>
   <body>
