--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           </div>
         </div>
       </section>
+      <div id="leaf-container"></div>
     </main>
     <footer>
       <p>
@@ -110,10 +111,11 @@
           ></a>
         </li>
       </ul>
+      
     </footer>
     <script src="./buildings.js"></script>
     <script src="./upgrades.js"></script>
     <script src="./script.js"></script>
-    <script src="cosmetics.js"></script>
+    <script src="./cosmetics.js"></script>
   </body>
 </html>
