--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <nav class="navbar">
-        <a href="" class="btn desktop" id="resetGame">Reset Game</a>
+        <a href="" class="btn desktop resetGame">Reset Game</a>
 
         <div class="nav-logo">
           <img src="./assets/img/logo.svg" alt="Weed Clicker Logo" />
@@ -33,7 +33,7 @@
               ><i class="fab fa-github"></i> Repository</a
             >
           </li>
-          <li><a href="" class="btn" id="resetGame">Reset Game</a></li>
+          <li><a href="" class="btn resetGame">Reset Game</a></li>
           <li class="ver">ver. <span id="version">0.0.1</span></li>
         </ul>
         <ul class="nav-links-desktop">
@@ -169,7 +169,7 @@
                 <td>Clicks per Second:</td>
                 <td id="clicksPerSecond">0</td>
               </tr>
-             <!--  <tr>
+              <!--  <tr>
                 <td>Favorite Click Booster:</td>
                 <td id="favoriteClickBooster">None</td>
               </tr> -->
@@ -208,10 +208,19 @@
         </li>
       </ul>
     </footer>
+    <div id="resetModal" class="modal">
+      <div class="modal-content">
+        <h2>Are you sure?</h2>
+        <p>This action will reset all your progress.</p>
+        <button id="confirmReset" class="btn btn-danger">Yes, Reset</button>
+        <button id="cancelReset" class="btn btn-cancel">Cancel</button>
+      </div>
+    </div>
     <script src="./buildings.js"></script>
     <script src="./upgrades.js"></script>
     <script src="./script.js"></script>
     <!-- <script src="./stats.js"></script> -->
     <script src="./cosmetics.js"></script>
+    <!-- Reset Game Modal -->
   </body>
 </html>
