--- a/index.html
+++ b/index.html
@@ -86,13 +86,14 @@
                 <input type="radio" name="setting" id="sell" />
               </div>
               <div class="amount">
-                <label for="amount">1</label>
-                <input type="radio" name="amount" id="onePer" />
-                <label for="amount">10</label>
+                <label for="onePer">1</label>
+                <input type="radio" name="amount" id="onePer" checked />
+                <label for="tenPer">10</label>
                 <input type="radio" name="amount" id="tenPer" />
-                <label for="amount">100</label>
+                <label for="hundredPer">100</label>
                 <input type="radio" name="amount" id="hundredPer" />
               </div>
+              
             </div>
             <div class="building-shop" id="building-shop"></div>
           </div>
