links now targeted to new tab

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <ul class="nav-links-mobile">
           <li><a href="index.html">Home</a></li>
           <li>
-            <a href="https://www.github.com/yousifpa98/clicker"
+            <a target="_blank" href="https://www.github.com/yousifpa98/clicker"
               ><i class="fab fa-github"></i> Repository</a
             >
           </li>
@@ -39,7 +39,7 @@
         <ul class="nav-links-desktop">
           <li><a href="index.html">Home</a></li>
           <li>
-            <a href="https://www.github.com/yousifpa98/clicker"
+            <a target="_blank" href="https://www.github.com/yousifpa98/clicker"
               ><i class="fab fa-github"></i>Repository</a
             >
           </li>
@@ -199,11 +199,11 @@
     </main>
     <footer>
       <p>
-        &copy; 2024 <a href="https://www.yousifpaulus.dev">Yousif Paulus</a>
+        &copy; 2024 <a target="_blank" href="https://www.yousifpaulus.dev">Yousif Paulus</a>
       </p>
       <ul class="footer-socials">
         <li>
-          <a href="https://www.github.com/yousifpa98"
+          <a target="_blank" href="https://www.github.com/yousifpa98"
             ><i class="fab fa-github"></i
           ></a>
         </li>
