hopefully fixed mobile zoom issue v2

--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
             <h2>buds of Weed</h2>
             <h4><span id="bps">0</span> buds per second</h4>
           </div>
-          <div id="clicker">
-            <img src="./assets/img/click_img.png" alt="bud" />
+          <div id="clicker" class="disable-dbl-tap-zoom">
+            <img
+              src="./assets/img/click_img.png"
+              alt="bud"
+              class="disable-dbl-tap-zoom"
+            />
           </div>
         </div>
         <!-- <div class="items"></div> -->
