music control styling for mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Weed Clicker</title>
   </head>
   <body>
-    <audio id="background-music" loop>
+    <audio id="background-music">
       <source src="./assets/audio/track_1.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
@@ -24,6 +24,9 @@
     <header>
       <nav class="navbar">
         <a href="" class="btn desktop resetGame">Reset Game</a>
+        <a href="#" class="musicButton music-control-button" id="music-toggle">
+          <i class="fas fa-music"></i>
+        </a>
         <div class="music-control">
           <button id="muteButton" class="mute-button">
             <i class="fas fa-volume-up"></i>
