double tap zoom on shop disabled

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
         </div>
         <!-- <div class="items"></div> -->
-        <div class="shop">
+        <div class="shop disable-dbl-tap-zoom">
           <h2>Shop</h2>
           <div class="upgrade-row" id="upgrade-row">
             <!-- <div class="upgrade-info">
