no slider in mobile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <button id="muteButton" class="mute-button">
             <i class="fas fa-volume-up"></i>
           </button>
-          <input type="range" id="volumeSlider" min="0" max="100" value="50" />
+          <input type="range" class="desktop volumeSlider" id="volumeSlider" min="0" max="100" value="50" />
           <button id="prevTrackButton" class="music-control-button">
             <i class="fas fa-step-backward"></i>
           </button>
