--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
           <button id="muteButton" class="mute-button">
             <i class="fas fa-volume-up"></i>
           </button>
-          <input type="range" class="desktop volumeSlider" id="volumeSlider" min="0" max="100" value="50" />
+          <input
+            type="range"
+            class="desktop volumeSlider"
+            id="volumeSlider"
+            min="0"
+            max="100"
+            value="50"
+          />
           <button id="prevTrackButton" class="music-control-button">
             <i class="fas fa-step-backward"></i>
           </button>
@@ -48,6 +55,11 @@
           <i class="fas fa-bars"></i>
         </div>
         <ul class="nav-links-mobile">
+          <li>
+            <a href="#" id="achievementTriggerMob">
+              <i class="fas fa-award"></i>
+            </a>
+          </li>
           <li><a href="index.html">Home</a></li>
           <li>
             <a target="_blank" href="https://www.github.com/yousifpa98/clicker"
@@ -58,6 +70,12 @@
           <li class="ver">ver. <span id="version">0.0.1</span></li>
         </ul>
         <ul class="nav-links-desktop">
+          <li></li>
+          <li>
+            <a href="#" id="achievementTrigger">
+              <i class="fas fa-award"></i>
+            </a>
+          </li>
           <li><a href="index.html">Home</a></li>
           <li>
             <a target="_blank" href="https://www.github.com/yousifpa98/clicker"
@@ -100,8 +118,7 @@
                 </div>
                 <p id="upgrade-text">Increases Bud production from plants.</p>
               </div> -->
-          <div class="upgrade-row" id="upgrade-row">
-          </div>
+          <div class="upgrade-row" id="upgrade-row"></div>
           <div class="buildings">
             <div class="building-controls">
               <div class="setting">
@@ -243,11 +260,27 @@
         <button id="cancelReset" class="btn btn-cancel">Cancel</button>
       </div>
     </div>
+
+    <!-- Achievement Modal -->
+    <div id="achivModal" class="achiv-modal">
+      <div class="achiv-modal-content">
+        <span id="achivModalClose" class="achiv-modal-close">&times;</span>
+        <h2>Unlocked Achievements</h2>
+        <div id="achivDetails" class="achiv-details">
+          <h3 id="achivName">Hover over an achievement</h3>
+          <p id="achivDesc">Achievement details will be displayed here.</p>
+        </div>
+        <div id="achivModalList" class="achiv-list"></div>
+        <!-- Achievements will be inserted here -->
+      </div>
+    </div>
+
     <script src="./buildings.js"></script>
     <script src="./upgrades.js"></script>
     <script src="./playlist.js"></script>
     <script src="./music.js"></script>
     <script src="./script.js"></script>
+    <script src="./achievements.js"></script>
     <script src="./cosmetics.js"></script>
   </body>
 </html>
